--- a/assets/html/partials/basket/basket.html
+++ b/assets/html/partials/basket/basket.html
@@ -48,7 +48,7 @@
                                     <img src="img/images/cardImage1.jpg" alt="">
                                 </div>
                                 <div class="basket__list_item_kod">
-                                    <p>Zoom-00002-beige</p>
+                                    <p><span class="basket__list_item_kod_mobile">Модель: </span>Zoom-00002-beige</p>
                                 </div>
                                 <div class="basket__list_item_name">
                                     <p>Босоножки 00001-beige</p>
@@ -57,10 +57,10 @@
                                     <p>В наличии</p>
                                 </div>
                                 <div class="basket__list_item_price">
-                                    <p>60.00 ₴ </p>
+                                    <p><span class="basket__list_item_price_mobile">Цена за пару: </span> 60.00 ₴ </p>
                                 </div>
                                 <div class="basket__list_item_price-box">
-                                    <p>480.00 ₴ </p>
+                                    <p><span class="basket__list_item_price-box_mobile">Цена за ящик: </span>480.00 ₴ </p>
                                 </div>
                                 <div class="basket__list_item_counter">
                                     <div class="basket__list_item_counter_wrap">
@@ -76,6 +76,46 @@
                                     <button>
                                         <i class="i-delete"></i>
                                     </button>
+                                </div>
+                                <div class="basket__list_item_mobile">
+                                    <div class="basket__list_item_kod_mobile">
+                                        <p><span class="basket__list_item_kod_mobile">Модель: </span>Zoom-00002-beige</p>
+                                    </div>
+                                    <div class="basket__list_item_name_mobile">
+                                        <p>Босоножки 00001-beige</p>
+                                    </div>
+                                    <div class="basket__list_item_nal_mobile">
+                                        <p>В наличии</p>
+                                    </div>
+                                    <div class="basket__list_item_price_mobile">
+                                        <p>
+                                            <span class="basket__list_item_price_mobile_title">Цена за штуку: </span>
+                                            <span class="basket__list_item_price_mobile_price">60.00 ₴</span>
+                                        </p>
+                                    </div>
+                                    <div class="basket__list_item_price-box_mobile">
+                                        <p>
+                                            <span class="basket__list_item_price-box_mobile_title">Цена за ящик: </span>
+                                            <span class="basket__list_item_price-box_mobile_price">480.00 ₴</span>
+                                        </p>
+                                    </div>
+                                    <div class="basket__list_item_counter_sum_mobile">
+                                        <div class="basket__list_item_counter_mobile">
+                                            <div class="basket__list_item_counter_wrap">
+                                                <button type="button" id="sub" class="sub"><i class="i-arrow"></i></button>
+                                                <input type="text" id="1" value="1" min="1">
+                                                <button type="button" id="add" class="add"><i class="i-arrow"></i></button>
+                                            </div>
+                                        </div>
+                                        <div class="basket__list_item_summ_mobile">
+                                            <p>600.00 ₴ </p>
+                                        </div>
+                                    </div>
+                                    <div class="basket__list_item_remove_mobile">
+                                        <button>
+                                            <i class="i-delete"></i>
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
                         </li>
@@ -85,7 +125,7 @@
                                     <img src="img/images/cardImage1.jpg" alt="">
                                 </div>
                                 <div class="basket__list_item_kod">
-                                    <p>Zoom-00002-beige</p>
+                                    <p><span class="basket__list_item_kod_mobile">Модель: </span>Zoom-00002-beige</p>
                                 </div>
                                 <div class="basket__list_item_name">
                                     <p>Босоножки 00001-beige</p>
@@ -94,10 +134,10 @@
                                     <p>В наличии</p>
                                 </div>
                                 <div class="basket__list_item_price">
-                                    <p>60.00 ₴ </p>
+                                    <p><span class="basket__list_item_price_mobile">Цена за пару: </span> 60.00 ₴ </p>
                                 </div>
                                 <div class="basket__list_item_price-box">
-                                    <p>480.00 ₴ </p>
+                                    <p><span class="basket__list_item_price-box_mobile">Цена за ящик: </span>480.00 ₴ </p>
                                 </div>
                                 <div class="basket__list_item_counter">
                                     <div class="basket__list_item_counter_wrap">
@@ -113,6 +153,46 @@
                                     <button>
                                         <i class="i-delete"></i>
                                     </button>
+                                </div>
+                                <div class="basket__list_item_mobile">
+                                    <div class="basket__list_item_kod_mobile">
+                                        <p><span class="basket__list_item_kod_mobile">Модель: </span>Zoom-00002-beige</p>
+                                    </div>
+                                    <div class="basket__list_item_name_mobile">
+                                        <p>Босоножки 00001-beige</p>
+                                    </div>
+                                    <div class="basket__list_item_nal_mobile">
+                                        <p>В наличии</p>
+                                    </div>
+                                    <div class="basket__list_item_price_mobile">
+                                        <p>
+                                            <span class="basket__list_item_price_mobile_title">Цена за штуку: </span>
+                                            <span class="basket__list_item_price_mobile_price">60.00 ₴</span>
+                                        </p>
+                                    </div>
+                                    <div class="basket__list_item_price-box_mobile">
+                                        <p>
+                                            <span class="basket__list_item_price-box_mobile_title">Цена за ящик: </span>
+                                            <span class="basket__list_item_price-box_mobile_price">480.00 ₴</span>
+                                        </p>
+                                    </div>
+                                    <div class="basket__list_item_counter_sum_mobile">
+                                        <div class="basket__list_item_counter_mobile">
+                                            <div class="basket__list_item_counter_wrap">
+                                                <button type="button" id="sub" class="sub"><i class="i-arrow"></i></button>
+                                                <input type="text" id="1" value="1" min="1">
+                                                <button type="button" id="add" class="add"><i class="i-arrow"></i></button>
+                                            </div>
+                                        </div>
+                                        <div class="basket__list_item_summ_mobile">
+                                            <p>600.00 ₴ </p>
+                                        </div>
+                                    </div>
+                                    <div class="basket__list_item_remove_mobile">
+                                        <button>
+                                            <i class="i-delete"></i>
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
                         </li>
@@ -122,7 +202,7 @@
                                     <img src="img/images/cardImage1.jpg" alt="">
                                 </div>
                                 <div class="basket__list_item_kod">
-                                    <p>Zoom-00002-beige</p>
+                                    <p><span class="basket__list_item_kod_mobile">Модель: </span>Zoom-00002-beige</p>
                                 </div>
                                 <div class="basket__list_item_name">
                                     <p>Босоножки 00001-beige</p>
@@ -131,10 +211,10 @@
                                     <p>В наличии</p>
                                 </div>
                                 <div class="basket__list_item_price">
-                                    <p>60.00 ₴ </p>
+                                    <p><span class="basket__list_item_price_mobile">Цена за пару: </span> 60.00 ₴ </p>
                                 </div>
                                 <div class="basket__list_item_price-box">
-                                    <p>480.00 ₴ </p>
+                                    <p><span class="basket__list_item_price-box_mobile">Цена за ящик: </span>480.00 ₴ </p>
                                 </div>
                                 <div class="basket__list_item_counter">
                                     <div class="basket__list_item_counter_wrap">
@@ -150,6 +230,46 @@
                                     <button>
                                         <i class="i-delete"></i>
                                     </button>
+                                </div>
+                                <div class="basket__list_item_mobile">
+                                    <div class="basket__list_item_kod_mobile">
+                                        <p><span class="basket__list_item_kod_mobile">Модель: </span>Zoom-00002-beige</p>
+                                    </div>
+                                    <div class="basket__list_item_name_mobile">
+                                        <p>Босоножки 00001-beige</p>
+                                    </div>
+                                    <div class="basket__list_item_nal_mobile">
+                                        <p>В наличии</p>
+                                    </div>
+                                    <div class="basket__list_item_price_mobile">
+                                        <p>
+                                            <span class="basket__list_item_price_mobile_title">Цена за штуку: </span>
+                                            <span class="basket__list_item_price_mobile_price">60.00 ₴</span>
+                                        </p>
+                                    </div>
+                                    <div class="basket__list_item_price-box_mobile">
+                                        <p>
+                                            <span class="basket__list_item_price-box_mobile_title">Цена за ящик: </span>
+                                            <span class="basket__list_item_price-box_mobile_price">480.00 ₴</span>
+                                        </p>
+                                    </div>
+                                    <div class="basket__list_item_counter_sum_mobile">
+                                        <div class="basket__list_item_counter_mobile">
+                                            <div class="basket__list_item_counter_wrap">
+                                                <button type="button" id="sub" class="sub"><i class="i-arrow"></i></button>
+                                                <input type="text" id="1" value="1" min="1">
+                                                <button type="button" id="add" class="add"><i class="i-arrow"></i></button>
+                                            </div>
+                                        </div>
+                                        <div class="basket__list_item_summ_mobile">
+                                            <p>600.00 ₴ </p>
+                                        </div>
+                                    </div>
+                                    <div class="basket__list_item_remove_mobile">
+                                        <button>
+                                            <i class="i-delete"></i>
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
                         </li>
@@ -159,7 +279,7 @@
                                     <img src="img/images/cardImage1.jpg" alt="">
                                 </div>
                                 <div class="basket__list_item_kod">
-                                    <p>Zoom-00002-beige</p>
+                                    <p><span class="basket__list_item_kod_mobile">Модель: </span>Zoom-00002-beige</p>
                                 </div>
                                 <div class="basket__list_item_name">
                                     <p>Босоножки 00001-beige</p>
@@ -168,10 +288,10 @@
                                     <p>В наличии</p>
                                 </div>
                                 <div class="basket__list_item_price">
-                                    <p>60.00 ₴ </p>
+                                    <p><span class="basket__list_item_price_mobile">Цена за пару: </span> 60.00 ₴ </p>
                                 </div>
                                 <div class="basket__list_item_price-box">
-                                    <p>480.00 ₴ </p>
+                                    <p><span class="basket__list_item_price-box_mobile">Цена за ящик: </span>480.00 ₴ </p>
                                 </div>
                                 <div class="basket__list_item_counter">
                                     <div class="basket__list_item_counter_wrap">
@@ -187,6 +307,46 @@
                                     <button>
                                         <i class="i-delete"></i>
                                     </button>
+                                </div>
+                                <div class="basket__list_item_mobile">
+                                    <div class="basket__list_item_kod_mobile">
+                                        <p><span class="basket__list_item_kod_mobile">Модель: </span>Zoom-00002-beige</p>
+                                    </div>
+                                    <div class="basket__list_item_name_mobile">
+                                        <p>Босоножки 00001-beige</p>
+                                    </div>
+                                    <div class="basket__list_item_nal_mobile">
+                                        <p>В наличии</p>
+                                    </div>
+                                    <div class="basket__list_item_price_mobile">
+                                        <p>
+                                            <span class="basket__list_item_price_mobile_title">Цена за штуку: </span>
+                                            <span class="basket__list_item_price_mobile_price">60.00 ₴</span>
+                                        </p>
+                                    </div>
+                                    <div class="basket__list_item_price-box_mobile">
+                                        <p>
+                                            <span class="basket__list_item_price-box_mobile_title">Цена за ящик: </span>
+                                            <span class="basket__list_item_price-box_mobile_price">480.00 ₴</span>
+                                        </p>
+                                    </div>
+                                    <div class="basket__list_item_counter_sum_mobile">
+                                        <div class="basket__list_item_counter_mobile">
+                                            <div class="basket__list_item_counter_wrap">
+                                                <button type="button" id="sub" class="sub"><i class="i-arrow"></i></button>
+                                                <input type="text" id="1" value="1" min="1">
+                                                <button type="button" id="add" class="add"><i class="i-arrow"></i></button>
+                                            </div>
+                                        </div>
+                                        <div class="basket__list_item_summ_mobile">
+                                            <p>600.00 ₴ </p>
+                                        </div>
+                                    </div>
+                                    <div class="basket__list_item_remove_mobile">
+                                        <button>
+                                            <i class="i-delete"></i>
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
                         </li>
