--- a/assets/stylesheets/bem/basket/basket.scss
+++ b/assets/stylesheets/bem/basket/basket.scss
@@ -21,6 +21,11 @@ a {
     }
 
     &__title {
+        
+        @media (max-width: 900px) {
+            padding-left: 20px;
+        }
+
         font-weight: 500;
         font-size: 38px;
         line-height: 46px;
@@ -33,6 +38,10 @@ a {
             font-size: 20px;
             line-height: 27px;
             text-transform: uppercase;
+
+            @media (max-width: 900px) {
+                font-size: 18px;
+            }
 
             span {
                 color: #25B4E5;
@@ -97,6 +106,13 @@ a {
             margin-bottom: 8px;
             padding-left: 44px;
 
+            @media (max-width: 900px) {
+                padding-left: 10px;
+                height: 100%;
+                margin: 20px;
+                position: relative;
+            }
+
             div {
                 overflow: hidden;
             }
@@ -105,6 +121,17 @@ a {
                 width: 46px;
                 height: 46px;
                 margin-right: 43px;
+
+                @media (max-width: 900px) {
+                    height: 200px;
+                    width: 200px;
+                    margin: 30px 10px 0px 10px;
+
+                    img{
+                        height: auto !important;
+                        width: 100% !important;
+                    }
+                }
 
                 img {
                     width: 100%;
@@ -119,11 +146,46 @@ a {
                 line-height: 16px;
                 color: #929292;
                 width: 152px;
+
+                &_mobile {
+                    display: none;
+
+                    @media (max-width: 900px) {
+                        padding-top: 8px;
+                        display: inline;
+                        font-family: var(--Fira-font);
+                        font-size: 10px;
+                        line-height: 16px;
+                        color: #929292;
+                        width: 152px;
+                        .p{
+                            padding-top:15px;
+                        }
+                    }
+                }
+
+                @media (max-width: 900px) {
+
+                    display: none;
+                }
             }
 
             &_name {
                 font-family: Open Sans;
                 width: 228px;
+
+                @media (max-width: 900px) {
+                    display: none;
+                }
+
+                &_mobile{
+                    padding-top: 0px;
+                    @media (max-width: 900px) {
+                        font-family: Open Sans;
+                        overflow: unset !important;
+                        font-size: 12px;
+                    }
+                }
             }
 
             &_nal {
@@ -132,19 +194,82 @@ a {
                 line-height: 18px;
                 color: #05C35C;
                 width: 128px;
+
+
+
+                @media (max-width: 900px) {
+                    display: none;
+                }
+
+                &_mobile{
+                    padding-top: 0px;
+                    font-family: var(--Fira-font);
+                    font-size: 15px;
+                    line-height: 18px;
+                    color: #05C35C;
+                    width: 128px;
+                    font-size: 10px;
+                }
             }
 
             &_price {
+                
                 font-family: var(--Fira-font);
                 font-size: 15px;
                 line-height: 18px;
                 width: 120px;
+
+                @media (max-width: 900px) {
+                    display: none;
+                }
+
+                &_mobile{
+                    justify-content: space-between;
+                    padding-top: 0px;
+                    &_title{
+                        display: inline;
+                        font-family: var(--Fira-font);
+                        font-size: 10px;
+                        line-height: 16px;
+                        color: #929292;
+                        text-align: left;
+                    }
+
+                    &_price{
+                        text-align: right;
+                        float: right;
+                        padding-right: 10px;
+                        font-size: 15px;
+                    }
+                }
 
                 &-box {
                     font-family: var(--Fira-font);
                     font-size: 15px;
                     line-height: 18px;
                     width: 120px;
+
+                    @media (max-width: 900px) {
+                        display: none;
+                    }
+
+                    &_mobile{
+                        font-size: 20px;
+                        padding-top: 0px;
+                        &_title{
+                            display: inline;
+                            font-family: var(--Fira-font);
+                            font-size: 10px;
+                            line-height: 16px;
+                            color: #929292;
+                        }
+                        &_price{
+                            text-align: right;
+                            float: right;
+                            padding-right: 10px;
+                            font-size: 15px;
+                        }
+                    }
                 }
             }
 
@@ -196,12 +321,20 @@ a {
                         border-right: 1px solid #DAE0E6;
                     }
                 }
+
+                @media (max-width: 900px) {
+                    display: none;
+                }
             }
 
             &_summ {
                 font-size: 15px;
                 line-height: 18px;
                 width: 96px;
+
+                @media (max-width: 900px) {
+                    display: none;
+                }
             }
 
             &_remove {
@@ -212,6 +345,71 @@ a {
                     i {
                         color: #5C6773;
                     }
+                }
+
+                @media (max-width: 900px) {
+                    display: none;
+                }
+
+                &_mobile{
+                    position: absolute;
+                    right: 15px;
+                    top: 25px;
+                    width: 30px;
+                    height: 30px;
+
+                    button{
+                        width: 100%;
+                        height: 100%;
+                        background-color: white;
+
+                        i::before{
+                            font-size: 10px;
+                        }
+                    }
+                }
+            }
+            &_counter_sum_mobile{
+                padding-top: 5px;
+                display: flex;
+                width: 100%;
+                justify-content: space-between;
+
+                .basket__list_item_counter_wrap{
+                    width: 70px;
+                    height: 20px;
+                }
+
+                .basket__list_item_summ_mobile{
+                    float: right;
+                    font-size: 15px;
+                    padding: 5px 10px 5px 0px;
+                }
+                .basket__list_item_counter_mobile{
+                    margin: 10px 0px 10px 0px;
+
+                    width: 70px;
+                    height: 20px;
+                    button{
+                        width:15px;
+                        height: 20px;
+                    }
+                    input{
+                        width:40px;
+                        height: 20px;
+                    }
+                }
+            }
+
+            &_mobile{
+                display: none;
+
+                @media (max-width: 900px) {
+                    display: inline;
+                    width: 100%;
+                    height: 100%;
+                    padding-left: 20px;
+                    margin-bottom: 25px;
                 }
             }
         }
@@ -240,6 +438,11 @@ a {
 
         &_btns {
             display: flex;
+
+            @media (max-width: 900px) {
+                display: block;
+                width: 100%;
+            }
         }
 
         &_btn {
@@ -265,6 +468,12 @@ a {
                 background: #25B4E5;
                 box-shadow: 0px 2px 10px rgba(41, 96, 204, 0.3), 0px 2px 4px rgba(41, 96, 204, 0.3);
                 color: #FFFFFF;
+            }
+
+            @media (max-width: 900px) {
+                margin: 10px;
+                margin-right: 10px;
+                width: 95%;
             }
         }
     }
