--- a/assets/html/partials/checkout/checkout.html
+++ b/assets/html/partials/checkout/checkout.html
@@ -65,7 +65,11 @@
                 </div>
                 <div class="wrap">
                     <p>Город</p>
-                    <input type="text" placeholder="Введиете ваш город">
+                    <select class="select-custom-city">
+                        <option>test</option>
+                        <option>test</option>
+                        <option>test</option>
+                    </select>
                 </div>
                 <div class="wrap">
                     <p>Номер
