--- a/assets/html/partials/header.html
+++ b/assets/html/partials/header.html
@@ -72,7 +72,9 @@
                <li><a href="">Женская <img src="img/icons/arrowHorizontal.svg" alt=""></a></li>
                <li><a href="">Мужская <img src="img/icons/arrowHorizontal.svg" alt=""></a></li>
                <li><a href="">Детская <img src="img/icons/arrowHorizontal.svg" alt=""></a></li>
-               <li><a href="">Украинская обувь</a></li>
+               <li>
+                  <a href="">Украинская обувь</a>
+               </li>
                <li><a href="">Бренды</a></li>
             </ul>
          </div>
@@ -419,7 +421,12 @@
                      </div>
                   </div>
                </li>
-               <li><a href="">Украинская обувь</a></li>
+               <li><a href="">Украинская обувь</a> 
+                  <div class="ukrainian-flag">
+                     <div class="ukrainian-flag_blue"></div>
+                     <div class="ukrainian-flag_yellow"></div>
+                  </div>
+               </li>
                <li><a href="">Бренды</a></li>
             </ul>
          </nav>
