--- a/assets/html/partials/checkout/checkout.html
+++ b/assets/html/partials/checkout/checkout.html
@@ -65,11 +65,7 @@
                 </div>
                 <div class="wrap">
                     <p>Город</p>
-                    <select class="select-custom-city">
-                        <option>test</option>
-                        <option>test</option>
-                        <option>test</option>
-                    </select>
+                    <input type="text" placeholder="Введиете ваш город">
                 </div>
                 <div class="wrap">
                     <p>Номер
