--- a/assets/stylesheets/bem/basket/basket.scss
+++ b/assets/stylesheets/bem/basket/basket.scss
@@ -24,6 +24,7 @@ a {
         
         @media (max-width: 900px) {
             padding-left: 20px;
+            font-family: var(--Fira-font);
         }
 
         font-weight: 500;
@@ -41,6 +42,8 @@ a {
 
             @media (max-width: 900px) {
                 font-size: 18px;
+                font-weight: 400;
+                margin-right: 20px;
             }
 
             span {
@@ -248,6 +251,10 @@ a {
                     font-size: 15px;
                     line-height: 18px;
                     width: 120px;
+
+                    p{
+
+                    }
 
                     @media (max-width: 900px) {
                         display: none;
