--- a/assets/stylesheets/bem/checkout/checkout.scss
+++ b/assets/stylesheets/bem/checkout/checkout.scss
@@ -217,20 +217,24 @@
             ul {
                 display: flex;
                 justify-content: space-between;
+                -ms-overflow-style: none;
+                scrollbar-width: none;
 
                 @media (max-width:900px) {
-                    overflow: scroll;
                     width: auto;
+                    overflow: scroll;
                     
                     padding-right: 10px;
                     padding-left: 10px;
+
+                    
                 }
 
                 li {
 
+
                     @media (max-width:900px) {
                         min-width: fit-content;
-                        overflow: scroll;
                         flex-wrap: nowrap;
                         max-width: none;
                         padding-right: 20px;
@@ -274,6 +278,10 @@
                     }
                 }
             }
+
+            ul::-webkit-scrollbar {
+                display: none;
+              }
         }
 
         .checkout_submit{
